apps/api-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-load-balancer
spec:
  type: LoadBalancer
  selector:
    component: api
  ports:
    - name: http
      port: 8088
      protocol: TCP
      targetPort: 8088
