apps/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
  namespace: vmanage
spec:
  type: ClusterIP
  selector:
    component: client
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
status:
  loadBalancer: {}
