apps/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: vmanage.visiumshift
    http:
      paths:
      - path: /
        backend:
          serviceName: client-cluster-ip-service
          servicePort: 80
      - path: /api
        backend:
          serviceName: api-cluster-ip-service
          servicePort: 8088
status:
  loadBalancer:
    ingress:
    - {}
